Websocket and notification pagination